Feat/ex2: Average values of all Items & Elements of a given Area, in a time interval (#7)
* feat(ex2): initial implementation for Exercise 2

* fix(ex2): update method call to match the Element API

* fix(ex2): change value from double to float

It now properly matches the attribute described in the Value class.

* feat(ex2): Change structure to List from Map

* feat(Utils): add mergeSort() sorting function

* feat(ex2): Add a public API for getAreaAverages()

* refactor(ex2): remove float[] hack in favor of a DoubleAdder

Using a float[] looks kinda hacky, so this should overall look better,
though the performance remains the same

* docs(ex2): Add Worst-case time complexity for the Exercise

* style(ex2): Change result printing format

* test(ex2): added initial tests for Exercise2

* fix(ex2): adopt Optional<Area> for searching

Code slightly moved around

* fix(ex2): Only add entries to averages if we have data

* refactor(Utils): cleanup Utils/UtilsTest classes

* fix(Main): update Main.java

* test(ex2): Added Unit Tests for Exercise2

There's still one test missing; waiting on averages to be calculated

* test(ex2): add averages array for the last test

* chore(ex2): remove unused import

* docs(Exercise2Test): add test scripts as comments

* fix(ex2): fix method calls to match PR #17

* refactor(Utils): alter Utils's sort methods

* test(ex2): test sorting with both merge and AVL sort