@@ -1,9 +1,11 @@
 package jovami.util;
 
-import java.util.Arrays;
-import java.util.List;
-import org.junit.jupiter.api.Test;
 import static org.junit.jupiter.api.Assertions.*;
+
+import java.util.Comparator;
+import java.util.List;
+
+import org.junit.jupiter.api.Test;
 
 /**
  *
@@ -11,18 +13,27 @@ import static org.junit.jupiter.api.Assertions.*;
  */
 public class UtilsTest {
 
-    public UtilsTest() {
-    }
-
     @Test
-    public void testAVLSort() {
-        List<String> lStrIni = Arrays.asList("rui","joao","carlos","filipe","berta","ze","cunha");
-        List<String> lStrRes = Arrays.asList("berta","carlos","cunha","filipe","joao","rui","ze");
+    void testAVLSort() {
+        var lStrIni = List.of("rui", "joao", "carlos", "filipe", "berta", "ze", "cunha");
+        var lStrRes = List.of("berta", "carlos", "cunha", "filipe", "joao", "rui", "ze");
 
-        List<Integer> lIntIni = Arrays.asList(12,4,8,2,4,5,78,1,6);
-        List<Integer> lIntRes = Arrays.asList(1,2,4,5,6,8,12,78);
+        var lIntIni = List.of(12,4,8,2,4,5,78,1,6);
+        var lIntRes = List.of(1,2,4,5,6,8,12,78);
 
         assertEquals(lIntRes, Utils.avlSort(lIntIni));
         assertEquals(lStrRes, Utils.avlSort(lStrIni));
+    }
+
+    @Test
+    void testAVLSortCmp() {
+        var lStrIni = List.of("rui", "joao", "carlos", "filipe", "berta", "ze", "cunha");
+        var lStrRes = List.of("ze", "rui", "joao", "filipe", "cunha", "carlos", "berta");
+
+        var lIntIni = List.of(12, 4, 8, 2, 4, 5, 78, 1, 6);
+        var lIntRes = List.of(78, 12, 8, 6, 5, 4, 2, 1);
+
+        assertEquals(lIntRes, Utils.avlSort(lIntIni, Comparator.reverseOrder()));
+        assertEquals(lStrRes, Utils.avlSort(lStrIni, Comparator.reverseOrder()));
     }
 }
